--- a/app/src/main/res/drawable/gradient_display.xml
+++ b/app/src/main/res/drawable/gradient_display.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:type="linear" android:angle="45"
-        android:startColor="#dff3ff" android:centerColor="@color/white" android:endColor="#dff3ff" />
+        android:startColor="#c5deed" android:centerColor="@color/white" android:endColor="#c5deed" />
 </shape>
