--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,17 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_fragment_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey"
     tools:context=".MainFragment">
 
-    <ImageView
-        android:id="@+id/image_view"
+    <com.google.ar.sceneform.SceneView
+        android:id="@+id/scene_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/dark_grey"
         android:visibility="gone"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/big_ar"
+        android:layout_width="125dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="37dp"
+        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/white_blue">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/opt_ar"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/circle_ar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/white_blue">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/ar"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:textColor="@color/black"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/change_pos_button"
+        android:layout_width="125dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="37dp"
+        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/white_blue">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/change_post"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/circle_change_pos_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/white_blue">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/location"
+            android:scaleType="centerInside"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/fast_change_pos_button"
+        android:layout_width="125dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="75dp"
+        android:layout_marginRight="37dp"
+        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/white_yellow">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/fast_change_pos"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/circle_fast_change_pos_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="70dp"
+        android:layout_marginRight="10dp"
+        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/white_yellow">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/fast_location"
+            android:scaleType="centerInside"/>
+    </androidx.cardview.widget.CardView>
 
     <RelativeLayout
         android:id="@+id/buttons_layout"
@@ -56,7 +167,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="..."
+                    android:text="More"
                     android:textSize="12sp"
                     android:textColor="@color/black"
                     android:backgroundTint="@color/white"
@@ -70,7 +181,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#1AFFFFFF"
+            android:background="#4DFFFFFF"
             android:orientation="horizontal"
             android:layout_centerHorizontal="true"
             android:visibility="gone"
